# pcsx-redux

./: .bazelrc  .coderabbit.yaml  .gitattributes  .gitignore  .gitmodules  .mailmap  001-patch.diff  404.html  AUTHORS  AppImageBuilder.yml  BUILD  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSES.md  Makefile  Makefile-cross-aa64  README.md  TODO.md  WORKSPACE  azure-pipelines-cli.yml  azure-pipelines-linux.yml  azure-pipelines-msvc.yml  azure-pipelines-vsce.yml  azure-pipelines-win32.yml  azure-pipelines.yml  compile_flags.txt  cross-env.list  crowdin.yml  data_types_redux.txt  distcc-make.sh  dockermake-cross.bat  dockermake-cross.sh  dockermake.bat  dockermake.sh  dockershell.bat  dockershell.sh  env.list  export_data_types_redux.py  (+12 more)
.circleci/: config.yml
.github/: funding.yml  zstr_strict_fstream_darwin_fix.patch
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/filter-mips/: README-filtered.md  filter.sh
.github/filter-support/: Makefile-filtered  README-filtered.md  close.yml  filter.sh
.github/rulesets/: main.json
.github/scripts/: create-app.sh  install-brew-dependencies.sh
.github/workflows/: build.yml  cachix-install-nix-action.yml  chores.yml  linux-asan.yml  linux-aur.yml  linux-build.yml  linux-coverage.yml  linux-cross.yml  linux-toolchain.yml  linux-tsan.yml  linux-ubsan.yml  macos-build.yml  macos-toolchain.yml  mkdocs.yml  toolchain.yml
Debugging/gdb-server/: index.html
Debugging/ghidra/: index.html
Debugging/gpu-logger/: index.html
Debugging/introduction/: index.html
Debugging/misc-features/: index.html
Debugging/vram-viewer/: index.html
Lua/assembler/: index.html
Lua/binary/: index.html
Lua/breakpoints/: index.html
Lua/case-studies/: index.html
Lua/events/: index.html
Lua/file-api/: index.html
Lua/introduction/: index.html
Lua/libraries/: index.html
Lua/memory-and-registers/: index.html
Lua/redux-basics/: index.html
Lua/rendering/: index.html
Lua/web-server/: index.html
advanced_features/: index.html
cli_flags/: index.html
compiling/: index.html
css/: extra.css
docs/: CPU_trace_dump.md  advanced_features.md  cli_flags.md  compiling.md  gdb-server.md  index.md  lua.md  menus.md  mips_api.md  one.md  openbios.md  web_server.md
docs/Debugging/: gdb-server.md  ghidra.md  gpu-logger.md  introduction.md  misc-features.md  vram-viewer.md
docs/Lua/: assembler.md  binary.md  breakpoints.md  case-studies.md  events.md  file-api.md  introduction.md  libraries.md  memory-and-registers.md  redux-basics.md  rendering.md  web-server.md
docs/css/: extra.css
gdb-server/: index.html
hardware/: README.md  pixel.lbr
hardware/CH37x-cart/: ch37x-cart.brd  ch37x-cart.sch
hardware/MC-Breakout/: MC-Breakout.brd  MC-Breakout.sch
hardware/PIO-Breakout/: PIO-Breakout.brd  PIO-Breakout.sch
hardware/PIO-Dev-Lite/: PIO-Dev-Lite-assembly.csv  PIO-Dev-Lite-bom.csv  PIO-Dev-Lite.brd  PIO-Dev-Lite.sch
hardware/PSXPWR-Variant1/: psxpwr.brd  psxpwr.sch
hardware/PSXPWR-Variant2/: psxpwr.brd  psxpwr.sch
hardware/PowerReplayUSB/: PowerReplayUSB - Assembly.csv  PowerReplayUSB - BOM.csv  PowerReplayUSB.brd  PowerReplayUSB.sch
hardware/PowerReplayUSBC/: PowerReplayUSBC - Assembly.csv  PowerReplayUSBC - BOM.csv  PowerReplayUSBC.brd  PowerReplayUSBC.sch
i18n/: de.po  el.po  es.po  es_ES.po  fr.po  hi.po  it.po  ja.po  mt.po  pcsx-redux.pot  pl.po  pt.po  pt_BR.po  sv.po  uk.po  zh.po  zh_CN.po
menus/: index.html
mips_api/: index.html
openbios/: index.html
resources/: pcsx-redux.desktop  pcsx-redux.rc  resource.h
search/: search_index.json
src/: .clang-format-asm  README.md
src/cdrom/: cdriso-cbin.cc  cdriso-ccd.cc  cdriso-cue.cc  cdriso-ecm.cc  cdriso-ffmpeg.cc  cdriso-mds.cc  cdriso-pbp.cc  cdriso-sbi.cc  cdriso-toc.cc  cdriso.cc  cdriso.h  common.h  file.cc  file.h  iec-60908b.cc  iec-60908b.h  iso9660-builder.cc  iso9660-builder.h  iso9660-highlevel.h  iso9660-lowlevel.h  iso9660-reader.cc  iso9660-reader.h  ppf.cc  ppf.h
src/core/: arguments.cc  arguments.h  binloader.cc  binloader.h  callstacks.cc  callstacks.h  cdriso-cbin.cc  cdriso-ccd.cc  cdriso-cue.cc  cdriso-ecm.cc  cdriso-ffmpeg.cc  cdriso-mds.cc  cdriso-pbp.cc  cdriso-sbi.cc  cdriso-toc.cc  cdriso.c  cdriso.cc  cdriso.h  cdrom.c  cdrom.cc  cdrom.h  cdromlogger.cc  cdromlogger.h  cheat.c  cheat.cc  cheat.h  coff.h  debug.c  debug.cc  debug.h  debug_client.cc  debug_client.h  decode_xa.c  decode_xa.cc  decode_xa.h  display.cc  display.h  disr3000a.c  disr3000a.cc  disr3000a.h  (+140 more)
src/forced-includes/: imgui.h
src/ftdi/: abstract-ftd2xx-win32.cc  abstract-libusb-posix.cc  abstract.h
src/gpu/: cfg.cc  debug.cc  debug.h  draw.cc  externals.h  fps.cc  gpu.cc  gpu.h  interface.h  key.cc  menu.cc  prim.cc  prim.h  renderer.cc  renderer.h  soft.cc  zn.cc
src/gui/: extra.lua  gui.cc  gui.h  imguiextraffi.lua  imguisafe.lua  luaimguiextra.cc  luaimguiextra.h  luanvg.cc  luanvg.h  nvgffi-cdefs.lua  nvgffi.lua  resources-unix.cc  resources-win32.cc  resources.h  splash.cc
src/lua/: extra.cc  extra.h  extra.lua  fileffi-cdef.lua  fileffi.lua  fileffimeta.lua  glffi-def2.lua  glffi-def3.lua  glffi-enum1.lua  glffi-enum3.lua  glffi.cc  glffi.h  glffi.lua  luafile.cc  luafile.h  luawrapper.cc  luawrapper.h  zlibffi.cc  zlibffi.h  zlibffi.lua
src/main/: complain.mm  flags.h  main.c  main.cc  main.h  mainthunk.cc  pcsx-wrapper.cc  settings.h  textui.cc  textui.h
src/mips/: .gitignore  Doxyfile  LICENSE  README.md  common.mk  cpe.ld  nooverlay.ld  notes.txt  ps-exe.ld  psx-exe.ld  xmake.ld  xmake.lua
tools/: Dockerfile  README.md
tools/vscode-extension/templates/bare-metal/cmake-cube/: .clangd  CMakeLists.txt  CMakePresets.json
tools/vscode-extension/templates/bare-metal/cmake-cube/src/: font.c  font.h  gpu.c  gpu.h  main.c  trig.c  trig.h
tools/vscode-extension/templates/bare-metal/empty-cmake/: CMakeLists.txt  CMakePresets.json
tools/vscode-extension/templates/bare-metal/empty-cmake/src/: main.c
vsprojects/: common.props  includes.props  pcsx-redux.sln  tests.props  tracy.props
web_server/: index.html
(+1469 files in other folders)
